--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,73 +4,225 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textDirection="rtl"
     tools:context=".MainActivity">
 
+
     <LinearLayout
-        android:layout_width="262dp"
-        android:layout_height="432dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="textPersonName"
-            android:text="@string/editText1"
-            android:textColor="#FF0009"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/is_equal"
-            app:strokeColor="#852626" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewResult"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+
+            android:background="#FFFFFF"
+            android:backgroundTint="#DAD7D7"
+            android:text="@string/textViewResult"
+            android:textSize="60sp" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/result"
-            android:textColor="#3A4FB7"
-            android:textSize="30sp"
-            android:textStyle="italic" />
+            android:layout_margin="15dp"
+            android:clipToPadding="true"
+            android:orientation="horizontal">
 
-        <Switch
-            android:id="@+id/switch1"
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt1" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt2" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt3" />
+
+            <Button
+                android:id="@+id/buttonDivide"
+                android:layout_width="wrap_content"
+
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/buttDivide" />
+
+            <Button
+                android:id="@+id/buttonClear"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+
+                android:layout_weight="1"
+                android:backgroundTint="#FF6F00"
+                android:text="@string/buttClear" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:shadowColor="#FFFFFF"
-            android:showText="false"
-            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:text="@string/switch1"
-            android:thumbTint="#2252B3" />
+            android:layout_margin="15dp"
+            android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/checkBox"
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt4" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="wrap_content"
+
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt5" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt6" />
+
+            <Button
+                android:id="@+id/buttonMultiply"
+                android:layout_width="wrap_content"
+
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/buttMultiply" />
+
+            <Button
+                android:id="@+id/buttonMinus"
+                android:layout_width="wrap_content"
+
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/buttMinus" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="#F83F04"
-            android:fontFamily="cursive"
-            android:text="@string/checkBox1" />
+            android:layout_margin="15dp"
+            android:orientation="horizontal">
 
-        <ToggleButton
-            android:id="@+id/toggleButton2"
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt7" />
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt8" />
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt9" />
+
+            <Button
+                android:id="@+id/buttonPlus"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/buttPlus" />
+
+            <Button
+                android:id="@+id/buttonPercent"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/buttPercent" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#009688"
-            android:ems="10"
-            android:text="ToggleButton"
-            android:textOff="ВКЛ"
-            android:textOn="ВЫКЛ" />
+            android:layout_margin="15dp"
+            android:orientation="horizontal">
 
+
+            <Button
+                android:id="@+id/button0"
+                android:layout_width="208dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:backgroundTint="#8E8D8D"
+                android:text="@string/butt0" />
+
+
+            <Button
+                android:id="@+id/buttonPt"
+                android:layout_width="62dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/buttPt"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/buttonResult"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/buttResult" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
