added 1st and 2nd way of click action realization

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -224,5 +224,13 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/buttonCounter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="buttonCounter1_onClick"
+            android:text="@string/counter_1" />
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
