--- a/app/src/main/res/layout/theme_1_3.xml
+++ b/app/src/main/res/layout/theme_1_3.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
 
-    <?xml version="1.0" encoding="utf-8"?>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="button1_onClick"
+                android:onClick="buttonCounter1_onClick"
                 android:text="@string/counter_1" />
             <TextView
                 android:id="@+id/textView1"
@@ -54,6 +54,28 @@
                 android:text="@string/_0"
                 android:textSize="@dimen/textCounter" />
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/counter_4" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/_0"
+                android:textSize="@dimen/textCounter" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
