--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textDirection="rtl"
+
     tools:context=".MainActivity">
 
 
     <LinearLayout
+        style='style="@style/MyCoolStyle"'
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -21,13 +23,14 @@
             android:layout_height="@dimen/textViewLayoutHeightPortrait"
             android:background="@color/grey"
             android:text="@string/textViewResult"
+            android:textColor="@color/light_grey_expression"
             android:textSize="@dimen/textViewTextSizePortrait" />
 
         <TextView
             android:id="@+id/textViewResult"
             android:layout_width="match_parent"
             android:layout_height="@dimen/textViewLayoutHeightPortrait"
-            android:layout_marginBottom="55dp"
+            android:layout_marginBottom="@dimen/textViewResultMarginBottomPortrait"
             android:background="@color/grey"
             android:text="@string/textViewResult"
             android:textColor="@color/black"
@@ -36,40 +39,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginStart="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginEnd="@dimen/linearLayoutMarginPortrait"
             android:clipToPadding="true"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button1"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
+
                 android:text="@string/butt1" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button2"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
-
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt2" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button3"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
 
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt3" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonDivide"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
 
@@ -80,14 +84,14 @@
                 android:text="@string/buttDivide" />
 
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonClear"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
 
                 android:layout_weight="1"
-                android:backgroundTint="#FF6F00"
+                android:backgroundTint="@color/orange"
                 android:text="@string/buttClear" />
 
         </LinearLayout>
@@ -95,38 +99,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginStart="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginEnd="@dimen/linearLayoutMarginPortrait"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button4"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
 
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt4" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button5"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt5" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button6"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt6" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonMultiply"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
 
@@ -136,7 +141,7 @@
                 android:backgroundTint="@color/teal_700"
                 android:text="@string/buttMultiply" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonMinus"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
 
@@ -151,37 +156,38 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginStart="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginEnd="@dimen/linearLayoutMarginPortrait"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button7"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt7" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button8"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt8" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button9"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_margin="@dimen/buttonBaseMarginPortrait"
                 android:layout_weight="1"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt9" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonPlus"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
@@ -190,7 +196,7 @@
                 android:backgroundTint="@color/teal_700"
                 android:text="@string/buttPlus" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonPercent"
                 android:layout_width="@dimen/buttonLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
@@ -204,31 +210,32 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginStart="@dimen/linearLayoutMarginPortrait"
+            android:layout_marginEnd="@dimen/linearLayoutMarginPortrait"
             android:orientation="horizontal">
 
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button0"
                 android:layout_width="@dimen/zeroButtonLayoutHeightPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_marginLeft="@dimen/buttonBaseMarginPortrait"
                 android:layout_marginRight="@dimen/buttonBaseMarginPortrait"
-                android:backgroundTint="#8E8D8D"
+                android:backgroundTint="@color/light_grey_buttons"
                 android:text="@string/butt0" />
 
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonPt"
                 android:layout_width="@dimen/buttonBottomLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
                 android:layout_marginLeft="@dimen/buttonBaseMarginPortrait"
                 android:layout_marginRight="@dimen/buttonBaseMarginPortrait"
-                android:text="@string/buttPt"
                 android:backgroundTint="@color/teal_700"
+                android:text="@string/buttPt"
                 android:textStyle="bold" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/buttonResult"
                 android:layout_width="@dimen/buttonBottomLayoutWidthPortrait"
                 android:layout_height="@dimen/buttonLayoutHeightPortrait"
