--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#DAD7D7</color>
+    <color name="light_grey_expression">#616161</color>
+    <color name="light_grey_buttons">#8E8D8D</color>
+    <color name="orange">#FF6F00</color>
+
+
 </resources>
