--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/white</item>
         <item name="colorAccent">@color/orange</item>
@@ -13,6 +13,7 @@
         <item name="android:textColorHint">@color/white</item>
         <item name="android:textColorLink">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
+        
 
     </style>
 
