--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,9 +21,8 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:textStyle="bold"
-                android:text="Выбор темы:" />
+                android:text="@string/settingsTextViewText" />
 
 
 
@@ -38,19 +37,21 @@
                 android:id="@+id/radioButtons"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+>
 
                 <RadioButton
                     android:id="@+id/rbtnStandardTheme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Стандартная" />
+                    android:text="@string/rBtnTextStandard" />
 
                 <RadioButton
                     android:id="@+id/rbtnDarkTheme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Темная" />
+                    android:scrollbarThumbHorizontal="@color/dark_grey"
+                    android:text="@string/rBtnTextDark"
+                    android:textColor="#100B0B" />
 
             </RadioGroup>
 
@@ -59,7 +60,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+
             android:orientation="horizontal">
 
             <Button
@@ -67,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_btnSettings"
-                android:text="Back" />
+                android:text="@string/btnBackText" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
